# InterviewPilot-AI

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  agent.md  main.py  memory.md  progress.md  project-context.md  pyproject.toml
.github/workflows/: pages.yml
backend/: __init__.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  env.py
backend/app/schemas/: __init__.py  coaching.py  common.py  evaluation.py  gap.py  health.py  interview.py  jd.py  optimization.py  report.py  resume.py  session.py
backend/app/services/: coach_prompt.py  evaluator_prompt.py  gap_analyzer.py  gap_prompt.py  interview_planner.py  interview_planner_prompt.py  interview_session.py  interviewer_prompt.py  jd_analyzer.py  jd_extraction.py  jd_prompt.py  json_store.py  llm_client.py  optimization_prompt.py  prompt_contract.py  report_generator.py  resume_analyzer.py  resume_extraction.py  resume_prompt.py
docs/: AGENT_PROMPTS.md  DEMO_RUNBOOK.md  PORTFOLIO_BRIEF.md  PRD.md
frontend/: index.html  package-lock.json  package.json  server.mjs
frontend/src/: app.js  styles.css
interviewpilot/: __init__.py  analysis.py  cli.py  interview.py  models.py  pipeline.py  report.py  text_utils.py
tests/: test_backend_skeleton.py  test_domain_schemas.py  test_env_config.py  test_gap_optimization_api.py  test_interview_planner_api.py  test_interview_session_api.py  test_jd_api.py  test_llm_client.py  test_mvp_flow.py  test_mvp_readiness.py  test_prompt_quality.py  test_report_api.py  test_resume_api.py  test_sessions_persistence_api.py
(+7 files in other folders)
